fixed bug dropdown button in navbar not showing

--- a/app/assets/stylesheets/components/_swipe.scss
+++ b/app/assets/stylesheets/components/_swipe.scss
@@ -3,7 +3,7 @@
   --color-error: red;
 }
 
-button {
+.swipe-button {
   visibility: hidden;
 }
 button .fa-times {
